# wine-deal-scanner

./: .env  .railwayignore  Makefile  README.md  build.sh  env.example  pyproject.toml  pytest.ini  railway.json  requirements.txt
.github/workflows/: ci.yml  live-tests.yml
app/: __init__.py  config.py  debug_current_deal.py  domutils.py  enrichment.py  extract.py  keep_awake.py  main.py  main_enhanced.py  main_minimal.py  models.py  notify.py  vivino.py  vivino_client.py  vivino_stealth.py  watcher.py  watcher_minimal.py
tests/: __init__.py  test_enrichment.py  test_extract.py  test_html_extract.py  test_lastbottle_parser.py  test_live_lastbottle.py  test_live_vivino.py  test_main.py  test_models.py  test_notify.py  test_safe_mode.py  test_vivino.py  test_vivino_parser.py  test_watcher_integration.py
tests/fixtures/lastbottle/: sample_deal.html  sample_deal_no_vintage.html
tests/fixtures/vivino/: wine_with_full_data.html  wine_with_partial_data.html
